--- a/README.Rmd
+++ b/README.Rmd
@@ -92,7 +92,7 @@ packageVersion(invitroTKstats)
 
 ## Unprocessed Data
 
-A subset of raw experimental data files are provided as part of the R package for demonstration purposes in the "Data Guide Creation and Level-0 Data Compilation" vignette.  These data files were originally published as part of \insertCite{kreutz2023category}{invitroTKstats}.  Details about these files can be found in the README file under the "inst/extdata/Kreutz-Clint" sub-directory, as well as a separate data processing GitHub repository [invitrotkstats_dataproc](https://github.com/USEPA/invitrotkstats_dataproc).
+A subset of raw experimental data files are provided as part of the R package for demonstration purposes in the "Data Guide Creation and Level-0 Data Compilation" vignette.  These data files were originally published as part of Kreutz et al. (2023).  Details about these files can be found in the README file under the "inst/extdata/Kreutz-Clint" sub-directory, as well as a separate data processing GitHub repository [invitrotkstats_dataproc](https://github.com/USEPA/invitrotkstats_dataproc) under "working/KreutzPFAS".
 
 ## Contributors
 
